--- a/demo.ipynb
+++ b/demo.ipynb
@@ -25,7 +25,11 @@
     "import pandas as pd\n",
     "import torch\n",
     "\n",
-    "from muutils.json_serialize import SerializableDataclass, serializable_dataclass, serializable_field\n",
+    "from muutils.json_serialize import (\n",
+    "    SerializableDataclass,\n",
+    "    serializable_dataclass,\n",
+    "    serializable_field,\n",
+    ")\n",
     "from zanj import ZANJ"
    ]
   },
@@ -54,6 +58,7 @@
     "    q: int = 42\n",
     "    c: list[int] = serializable_field(default_factory=list)\n",
     "\n",
+    "\n",
     "# initialize a zanj reader/writer\n",
     "zj = ZANJ()\n",
     "\n",
@@ -80,7 +85,7 @@
    ],
    "source": [
     "print(f\"{type(recovered) = }\")  # BasicZanj\n",
-    "print(f\"{os.path.getsize(path) = }\")\n"
+    "print(f\"{os.path.getsize(path) = }\")"
    ]
   },
   {
@@ -105,7 +110,7 @@
     "    iris_data: pd.DataFrame\n",
     "    brain_data: pd.DataFrame\n",
     "    container: list[BasicZanj]\n",
-    "    torch_tensor: torch.Tensor\n"
+    "    torch_tensor: torch.Tensor"
    ]
   },
   {
@@ -159,6 +164,7 @@
    "source": [
     "from zanj.torchutil import ConfiguredModel, set_config_class\n",
     "\n",
+    "\n",
     "@serializable_dataclass\n",
     "class MyNNConfig(SerializableDataclass):\n",
     "    input_dim: int\n",
@@ -198,11 +204,11 @@
     "@set_config_class(MyNNConfig)\n",
     "class MyNN(ConfiguredModel[MyNNConfig]):\n",
     "    def __init__(self, config: MyNNConfig):\n",
-    "\t\t# call the superclass init!\n",
-    "\t\t# this will store the model in the zanj_model_config field\n",
+    "        # call the superclass init!\n",
+    "        # this will store the model in the zanj_model_config field\n",
     "        super().__init__(config)\n",
     "\n",
-    "\t\t# whatever you want here\n",
+    "        # whatever you want here\n",
     "        self.net = torch.nn.Sequential(\n",
     "            torch.nn.Linear(config.input_dim, config.hidden_dim),\n",
     "            config.act_fn(),\n",
@@ -210,7 +216,7 @@
     "        )\n",
     "\n",
     "    def forward(self, x):\n",
-    "        return self.net(x)\n"
+    "        return self.net(x)"
    ]
   },
   {
@@ -241,7 +247,7 @@
     "ZANJ().save(model, fname)\n",
     "# load by calling the class method `read()`\n",
     "loaded_model = MyNN.read(fname)\n",
-    "# zanj will actually infer the type of the object in the file \n",
+    "# zanj will actually infer the type of the object in the file\n",
     "# -- and will warn you if you don't have the correct package installed\n",
     "loaded_another_way = ZANJ().read(fname)"
    ]
@@ -263,7 +269,7 @@
    ],
    "source": [
     "print(f\"{type(loaded_model) = }\")\n",
-    "x=torch.randn(config.input_dim)\n",
+    "x = torch.randn(config.input_dim)\n",
     "print(f\"{x.shape = }\")\n",
     "out_1 = model(x)\n",
     "out_2 = loaded_model(x)\n",
