--- a/demo.ipynb
+++ b/demo.ipynb
@@ -128,7 +128,7 @@
    "outputs": [],
    "source": [
     "@serializable_dataclass\n",
-    "class Complicated(SerializableDataclass):\n",
+    "class Complicated2(SerializableDataclass):\n",
     "    name: str\n",
     "    device: torch.device = serializable_field(\n",
     "        serialization_fn=lambda self: str(self.device),\n",
